Use configuration file.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import matplotlib.patheffects as pe\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import yaml\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -48,11 +50,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "CONFIG_FILE = \"02\"\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = config[\"DISC_STD_CIRC\"]\n",
+    "DISC_MIN_CIRC = config[\"DISC_MIN_CIRC\"]\n",
+    "COLD_DISC_DELTA_CIRC = config[\"COLD_DISC_DELTA_CIRC\"]\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = config[\"BULGE_MAX_SPECIFIC_ENERGY\"]\n",
+    "SUFFIX = config[\"FILE_SUFFIX\"]"
    ]
   },
   {
@@ -65,11 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(simulation: str) -> tuple:\n",
+    "def read_data(simulation: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    This method returns the circularity and the normalized potential for the\n",
     "    stars in the main object of the simulation.\n",
@@ -81,8 +93,8 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    tuple\n",
-    "        The circularity and normalized potential.\n",
+    "    pd.DataFrame\n",
+    "        A Pandas dataframe with the relevant data.\n",
     "    \"\"\"\n",
     "    settings = Settings()\n",
     "\n",
@@ -94,10 +106,20 @@
     "\n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
     "    is_main_obj = (s.halo == s.halo_idx) & (s.subhalo == s.subhalo_idx)\n",
+    "    mask = is_real_star & is_main_obj\n",
     "\n",
-    "    return (s.circularity[is_real_star & is_main_obj],\n",
-    "            s.normalized_potential[is_real_star & is_main_obj],\n",
-    "            s.normalized_specific_energy[is_real_star & is_main_obj])"
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Circularity\": s.circularity[mask],\n",
+    "            \"NormalizedPotential\": s.normalized_potential[mask],\n",
+    "            \"NormalizedSpecificEnergy\": s.normalized_specific_energy[mask],\n",
+    "            \"CylindricalRadius_ckpc\": s.rho[mask],\n",
+    "            \"z_ckpc\": s.pos[mask, 2],\n",
+    "            \"TangentialVelocity_km/s\": s.v_phi[mask]\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    return df"
    ]
   },
   {
@@ -109,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,10 +155,11 @@
     "\n",
     "    galaxy, _, _, _ = parse(simulation)\n",
     "    label = f\"Au{galaxy}\"\n",
-    "    circularity, _, energy = read_data(simulation=simulation)\n",
+    "    df = read_data(simulation=simulation)\n",
     "\n",
     "    _, _, _, _ = ax.hist2d(\n",
-    "        circularity, energy,\n",
+    "        df[\"Circularity\"].to_numpy(),\n",
+    "        df[\"NormalizedSpecificEnergy\"].to_numpy(),\n",
     "        cmap='nipy_spectral', bins=200,\n",
     "        range=[ax.get_xlim(), ax.get_ylim()],\n",
     "        norm=mcolors.LogNorm(vmin=1E0, vmax=1E3), rasterized=True)\n",
@@ -180,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +239,9 @@
     "    galaxy = settings.groups[\"Included\"][i]\n",
     "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
     "    label = f\"Au{galaxy}\"\n",
-    "    circularity, _, energy = read_data(simulation=simulation)\n",
-    "    _, _, _, im = ax.hist2d(circularity,\n",
-    "                            energy,\n",
+    "    df = read_data(simulation=simulation)\n",
+    "    _, _, _, im = ax.hist2d(df[\"Circularity\"].to_numpy(),\n",
+    "                            df[\"NormalizedSpecificEnergy\"].to_numpy(),\n",
     "                            cmap='nipy_spectral',\n",
     "                            bins=200,\n",
     "                            range=[ax.get_xlim(), ax.get_ylim()],\n",
@@ -246,6 +269,18 @@
     "\n",
     "plt.close(fig)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
