Use config from external file.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -47,19 +47,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "MIN_PART_COUNT = 100\n",
     "RXY_RANGE = (0, 30)\n",
-    "N_BINS = 30\n",
-    "\n",
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "N_BINS = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG_FILE = \"02\"\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))\n",
+    "DISC_STD_CIRC = config[\"DISC_STD_CIRC\"]\n",
+    "DISC_MIN_CIRC = config[\"DISC_MIN_CIRC\"]\n",
+    "COLD_DISC_DELTA_CIRC = config[\"COLD_DISC_DELTA_CIRC\"]\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = config[\"BULGE_MAX_SPECIFIC_ENERGY\"]\n",
+    "SUFFIX = config[\"FILE_SUFFIX\"]"
    ]
   },
   {
