Update figure style.

--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import matplotlib.patheffects as pe\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,15 +45,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "CONFIG_FILE = \"02\"\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = config[\"DISC_STD_CIRC\"]\n",
+    "DISC_MIN_CIRC = config[\"DISC_MIN_CIRC\"]\n",
+    "COLD_DISC_DELTA_CIRC = config[\"COLD_DISC_DELTA_CIRC\"]\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = config[\"BULGE_MAX_SPECIFIC_ENERGY\"]\n",
+    "SUFFIX = config[\"FILE_SUFFIX\"]"
    ]
   },
   {
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,14 +241,14 @@
     "\n",
     "    # Draw lines for the components\n",
     "    ax.plot([DISC_MIN_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "            ax.get_ylim(), ls=(0, (5, 1)), c='k', lw=0.75)\n",
     "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "            ax.get_ylim(), ls=(0, (5, 1)), c='k', lw=0.75)\n",
     "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
+    "            ax.get_ylim(), ls=(0, (5, 1)), c='k', lw=0.75)\n",
     "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
     "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"--\", c='k', lw=0.75)\n",
+    "            ls=(0, (5, 1)), c='k', lw=0.75)\n",
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/phase_space_included{SUFFIX}.pdf\")\n",
