Update figure style.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -10,31 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.colors as mcolors\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import binned_statistic\n",
-    "from binned_stats import get_binned_statistic"
+    "from binned_stats import get_binned_statistic\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,24 +48,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "MIN_PART_COUNT = 100\n",
     "RXY_RANGE = (0, 30)\n",
-    "N_BINS = 30\n",
-    "\n",
-    "DISC_STD_CIRC = settings.disc_std_circ\n",
-    "DISC_MIN_CIRC = settings.disc_min_circ\n",
-    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
-    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
-    "SUFFIX = \"_02\""
+    "N_BINS = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG_FILE = \"02\"\n",
+    "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))\n",
+    "DISC_STD_CIRC = config[\"DISC_STD_CIRC\"]\n",
+    "DISC_MIN_CIRC = config[\"DISC_MIN_CIRC\"]\n",
+    "COLD_DISC_DELTA_CIRC = config[\"COLD_DISC_DELTA_CIRC\"]\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = config[\"BULGE_MAX_SPECIFIC_ENERGY\"]\n",
+    "SUFFIX = config[\"FILE_SUFFIX\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,29 +292,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"$v_\\phi$\", \"$v_r$\", r\"$v^\\dagger_z$\", \"$\\sigma_v$\"]\n",
+    "features = [\"TangentialVelocity\", \"RadialVelocity\", \"VerticalVelocity\",\n",
+    "            \"VelocityDispersion\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(7.4, 8.0))\n",
-    "gs = fig.add_gridspec(nrows=4, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, height_ratios=[1, 0.05, 1, 1, 0.05, 1],\n",
+    "                      hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=False)\n",
+    "\n",
     "\n",
     "for ax in axs.flat:\n",
     "    ax.grid(False)\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_xlim(0, 30)\n",
-    "    ax.set_ylim(-100, 350)\n",
     "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
-    "    ax.set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
     "    ax.set_xlabel(r'$r_{xy}$ [ckpc]')\n",
     "    ax.label_outer()\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "\n",
-    "axs[0, 0].set_ylabel(r'$v_r$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[1, 0].set_ylabel(r'$v_z^\\dagger$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[2, 0].set_ylabel(r'$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[3, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "for i in range(axs.shape[1]):\n",
+    "    axs[0, i].set_ylim(-100, 350)\n",
+    "    axs[0, i].set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
+    "\n",
+    "    for j in ([2, 3]):\n",
+    "        axs[j, i].set_ylim(-50, 150)\n",
+    "        axs[j, i].set_yticks([0, 50, 100])\n",
+    "    \n",
+    "    axs[5, i].set_ylim(0, 150)\n",
+    "    axs[5, i].set_yticks([50, 100])\n",
+    "\n",
+    "axs[0, 0].set_ylabel(r'$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[2, 0].set_ylabel(r'$v_r$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[3, 0].set_ylabel(r'$v_z^\\dagger$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[5, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "\n",
+    "for ax in axs[1, :]:\n",
+    "    ax.set_visible(False)\n",
+    "\n",
+    "for ax in axs[4, :]:\n",
+    "    ax.set_visible(False)\n",
     "\n",
     "for simulation in SAMPLE:\n",
     "    c, label, zorder, lw = \"silver\", None, 10, 0.75\n",
@@ -332,7 +360,13 @@
     "                f\"{simulation.upper()}_ParticleCount_{component}\"] \\\n",
     "                    >= MIN_PART_COUNT\n",
     "\n",
-    "            axs[i, idx].plot(\n",
+    "            row_idx = i\n",
+    "            if i >= 1:\n",
+    "                row_idx = i + 1\n",
+    "            if i == 3:\n",
+    "                row_idx += 1\n",
+    "\n",
+    "            axs[row_idx, idx].plot(\n",
     "                data[\"BinCenters_ckpc\"][is_finite & has_particles],\n",
     "                data[f\"{simulation.upper()}_{feature}_{component}_km/s\"][\n",
     "                    is_finite & has_particles],\n",
@@ -354,7 +388,7 @@
     "    #                 for simulation in SAMPLE]], axis=1),\n",
     "    #         lw=1.25, zorder=15, c='k', label=\"Average\")\n",
     "\n",
-    "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0)\n",
+    "axs[2, 0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0)\n",
     "\n",
     "fig.savefig(\n",
     "    f\"../images/stellar_velocities_by_region/included_average{SUFFIX}.pdf\")\n",
