Update figure style.

--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,11 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONFIG_FILE = \"12\"\n",
+    "CONFIG_FILE = \"02\"\n",
     "config = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))\n",
     "DISC_STD_CIRC = config[\"DISC_STD_CIRC\"]\n",
     "DISC_MIN_CIRC = config[\"DISC_MIN_CIRC\"]\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,29 +292,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"$v_\\phi$\", \"$v_r$\", r\"$v^\\dagger_z$\", \"$\\sigma_v$\"]\n",
+    "features = [\"TangentialVelocity\", \"RadialVelocity\", \"VerticalVelocity\",\n",
+    "            \"VelocityDispersion\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(7.4, 8.0))\n",
-    "gs = fig.add_gridspec(nrows=4, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, height_ratios=[1, 0.05, 1, 1, 0.05, 1],\n",
+    "                      hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=False)\n",
     "\n",
     "for ax in axs.flat:\n",
     "    ax.grid(False)\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_xlim(0, 30)\n",
-    "    ax.set_ylim(-100, 350)\n",
     "    ax.set_xticks([0, 5, 10, 15, 20, 25])\n",
-    "    ax.set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
     "    ax.set_xlabel(r'$r_{xy}$ [ckpc]')\n",
     "    ax.label_outer()\n",
     "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
     "\n",
-    "axs[0, 0].set_ylabel(r'$v_r$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[1, 0].set_ylabel(r'$v_z^\\dagger$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[2, 0].set_ylabel(r'$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
-    "axs[3, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "for i in range(axs.shape[1]):\n",
+    "    axs[0, i].set_ylim(-100, 350)\n",
+    "    axs[0, i].set_yticks([-50, 0, 50, 100, 150, 200, 250, 300])\n",
+    "\n",
+    "    for j in ([2, 3]):\n",
+    "        axs[j, i].set_ylim(-50, 150)\n",
+    "        axs[j, i].set_yticks([0, 50, 100])\n",
+    "    \n",
+    "    axs[5, i].set_ylim(0, 150)\n",
+    "    axs[5, i].set_yticks([50, 100])\n",
+    "\n",
+    "axs[0, 0].set_ylabel(r'$v_\\phi$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[2, 0].set_ylabel(r'$v_r$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[3, 0].set_ylabel(r'$v_z^\\dagger$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "axs[5, 0].set_ylabel(r'$\\sigma_v$ [$\\mathrm{km} \\, \\mathrm{s}^{-1}]$')\n",
+    "\n",
+    "for ax in axs[1, :]:\n",
+    "    ax.set_visible(False)\n",
+    "\n",
+    "for ax in axs[4, :]:\n",
+    "    ax.set_visible(False)\n",
     "\n",
     "for simulation in SAMPLE:\n",
     "    c, label, zorder, lw = \"silver\", None, 10, 0.75\n",
@@ -332,7 +359,13 @@
     "                f\"{simulation.upper()}_ParticleCount_{component}\"] \\\n",
     "                    >= MIN_PART_COUNT\n",
     "\n",
-    "            axs[i, idx].plot(\n",
+    "            row_idx = i\n",
+    "            if i >= 1:\n",
+    "                row_idx = i + 1\n",
+    "            if i == 3:\n",
+    "                row_idx += 1\n",
+    "\n",
+    "            axs[row_idx, idx].plot(\n",
     "                data[\"BinCenters_ckpc\"][is_finite & has_particles],\n",
     "                data[f\"{simulation.upper()}_{feature}_{component}_km/s\"][\n",
     "                    is_finite & has_particles],\n",
@@ -354,7 +387,7 @@
     "    #                 for simulation in SAMPLE]], axis=1),\n",
     "    #         lw=1.25, zorder=15, c='k', label=\"Average\")\n",
     "\n",
-    "axs[1, 0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0)\n",
+    "axs[2, 0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0)\n",
     "\n",
     "fig.savefig(\n",
     "    f\"../images/stellar_velocities_by_region/included_average{SUFFIX}.pdf\")\n",
