--- a/scripts/Spatial Distribution of Stars.ipynb
+++ b/scripts/Spatial Distribution of Stars.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Spatial Distribution of Stars"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +109,13 @@
     "        is_component = df[\"ComponentTag\"] == settings.component_tags[component]\n",
     "    mask = is_age & is_component \n",
     "    return mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Radial Distribution"
    ]
   },
   {
@@ -259,6 +258,13 @@
     "            size=6.0, transform=ax.transAxes, ha='right', va='top')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vertical Distribution"
    ]
   },
   {
@@ -458,6 +464,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Density Maps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change parameters here\n",
+    "CONFIG_FILE = \"02\"\n",
+    "SIMULATION = \"au6_or_l4_s127\"\n",
+    "N_BINS = 100\n",
+    "BOX_SIZE = 100.0\n",
+    "VMIN, VMAX = 1E4, 1E9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "galaxy = parse(SIMULATION)[0]\n",
+    "label = f\"Au{galaxy}\"\n",
+    "df = read_data(simulation=SIMULATION, config=CONFIG)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -484,40 +531,37 @@
     "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    ax.set_axisbelow(True)\n",
-    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
     "\n",
     "for i in range(axs.shape[1]):\n",
-    "    axs[0, i].set_xlim(-50, 50)\n",
+    "    axs[0, i].set_xlim(-BOX_SIZE / 2, BOX_SIZE / 2)\n",
     "    axs[0, i].set_xlabel(r\"$x$ [ckpc]\")\n",
-    "    axs[0, i].set_ylim(-50, 50)\n",
+    "    axs[0, i].set_ylim(-BOX_SIZE / 2, BOX_SIZE / 2)\n",
     "    axs[0, i].set_ylabel(r\"$y$ [ckpc]\")\n",
-    "    axs[1, i].set_xlim(-50, 50)\n",
+    "    axs[1, i].set_xlim(-BOX_SIZE / 2, BOX_SIZE / 2)\n",
     "    axs[1, i].set_xlabel(r\"$x$ [ckpc]\")\n",
-    "    axs[1, i].set_ylim(-50, 50)\n",
+    "    axs[1, i].set_ylim(-BOX_SIZE / 2, BOX_SIZE / 2)\n",
     "    axs[1, i].set_ylabel(r\"$z$ [ckpc]\")\n",
     "\n",
     "for ax in axs.flatten():\n",
     "    ax.label_outer()\n",
     "    ax.set_aspect(\"equal\")\n",
     "\n",
-    "galaxy = parse(SIMULATION)[0]\n",
-    "label = f\"Au{galaxy}\"\n",
-    "df = read_data(simulation=SIMULATION, config=CONFIG)\n",
-    "\n",
     "for i, c in enumerate(settings.components):\n",
     "    mask = get_mask(df, component=c)\n",
     "    axs[0, i].hist2d(\n",
     "        df[\"xPosition_ckpc\"][mask], df[\"yPosition_ckpc\"][mask],\n",
     "        weights=df[\"Mass_Msun\"][mask],\n",
-    "        bins=100, range=[[-50, 50], [-50, 50]],\n",
+    "        bins=N_BINS, range=[[-BOX_SIZE / 2, BOX_SIZE / 2],\n",
+    "                            [-BOX_SIZE / 2, BOX_SIZE / 2]],\n",
     "        cmap=settings.component_colormaps[c], zorder=-10,\n",
-    "        norm=mcolors.LogNorm(vmin=1E4, vmax=1E9))\n",
+    "        norm=mcolors.LogNorm(vmin=VMIN, vmax=VMAX))\n",
     "    axs[1, i].hist2d(\n",
     "        df[\"xPosition_ckpc\"][mask], df[\"zPosition_ckpc\"][mask],\n",
     "        weights=df[\"Mass_Msun\"][mask],\n",
-    "        bins=100, range=[axs[1, 0].get_xlim(), axs[1, 0].get_ylim()],\n",
+    "        bins=N_BINS, range=[[-BOX_SIZE / 2, BOX_SIZE / 2],\n",
+    "                            [-BOX_SIZE / 2, BOX_SIZE / 2]],\n",
     "        cmap=settings.component_colormaps[c], zorder=-10,\n",
-    "        norm=mcolors.LogNorm(vmin=1E4, vmax=1E9))\n",
+    "        norm=mcolors.LogNorm(vmin=VMIN, vmax=VMAX))\n",
     "    axs[0, i].text(\n",
     "        s=r\"$\\textbf{\" + settings.component_labels[c] + r\"}$\",\n",
     "        x=0.5, y=0.95, size=8, ha=\"center\", va=\"top\",\n",
@@ -535,12 +579,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Median Height of Stars by Component"
+    "## Height Profiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change parameters here\n",
+    "CONFIG_FILE = \"02\"\n",
+    "SIMULATION = \"au6_or_l4_s127\"\n",
+    "AGE_BINS = [2, 3, 4, 5, 6, 7, 8, 14]\n",
+    "RXY_BINS = [i for i in range(21)]\n",
+    "RXY_BIN_CENTERS = [(2 * i + 1) / 2 for i in RXY_BINS[:-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,31 +627,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stellar_age_bins = [2, 3, 4, 5, 6, 7, 8, 14]\n",
-    "rxy_bins = [i for i in range(21)]\n",
-    "rxy_bin_centers = [(2 * i + 1) / 2 for i in rxy_bins[:-1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['AgeBin_Gyr'] = pd.cut(df['StellarAge_Gyr'], bins=stellar_age_bins,\n",
+    "df['AgeBin_Gyr'] = pd.cut(df['StellarAge_Gyr'], bins=AGE_BINS,\n",
     "                          right=False)\n",
     "df[\"CylRadiusBin_ckpc\"] = pd.cut(df[\"CylindricalRadius_ckpc\"],\n",
-    "                                 bins=rxy_bins, right=False)\n",
+    "                                 bins=RXY_BINS, right=False)\n",
     "df = df[(df[\"ComponentTag\"] == 2) | (df[\"ComponentTag\"] == 3)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -640,17 +696,17 @@
     "    ax.set_yticks([0, 1, 2, 3, 4], minor=False)\n",
     "    ax.label_outer()\n",
     "\n",
-    "for i in range(len(stellar_age_bins) - 1):\n",
-    "    age_range = pd.Interval(stellar_age_bins[i], stellar_age_bins[i + 1],\n",
+    "for i in range(len(AGE_BINS) - 1):\n",
+    "    age_range = pd.Interval(AGE_BINS[i], AGE_BINS[i + 1],\n",
     "                            closed='left')\n",
-    "    color = cmap(i / (len(stellar_age_bins) - 1))\n",
+    "    color = cmap(i / (len(AGE_BINS) - 1))\n",
     "    axs[0].plot(\n",
-    "        rxy_bin_centers,\n",
+    "        RXY_BIN_CENTERS,\n",
     "        result[2].loc[age_range].values,\n",
     "        color=color, label=age_range,\n",
     "        )\n",
     "    axs[1].plot(\n",
-    "        rxy_bin_centers,\n",
+    "        RXY_BIN_CENTERS,\n",
     "        result[3].loc[age_range].values,\n",
     "        color=color\n",
     "        )\n",
