Calculate galaxy size.

--- a/scripts/Spatial Distribution of Stars.ipynb
+++ b/scripts/Spatial Distribution of Stars.ipynb
@@ -18,19 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
     "from auriga.settings import Settings\n",
-    "from auriga.parser import parse"
+    "from auriga.parser import parse\n",
+    "from auriga.mathematics import weighted_percentile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,9 @@
     "        \"zPosition_ckpc\": s.pos[mask, 2],\n",
     "        \"ComponentTag\": s.region_tag[mask],\n",
     "        \"StellarAge_Gyr\": s.stellar_age[mask],\n",
-    "        \"Mass_Msun\": s.mass[mask],}\n",
+    "        \"Mass_Msun\": s.mass[mask],\n",
+    "        \"SphericalRadius_ckpc\": s.r[mask],\n",
+    "        }\n",
     "\n",
     "    df = pd.DataFrame(props)\n",
     "    df[~np.isfinite(df)] = np.nan\n",
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,6 +842,105 @@
     "              title=\"Age [Gyr]\", title_fontsize=4)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Component Sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change parameters here\n",
+    "CONFIG_FILE = \"02\"\n",
+    "SIMULATION = \"au6_or_l4_s127\"\n",
+    "PERCENTILE = 90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONFIG = yaml.safe_load(open(f\"../configs/{CONFIG_FILE}.yml\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "galaxy = parse(SIMULATION)[0]\n",
+    "label = f\"Au{galaxy}\"\n",
+    "df = read_data(simulation=SIMULATION, config=CONFIG)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Halo ==\n",
+      "z = 34.013 ckpc\n",
+      "r_xy = 67.194 ckpc\n",
+      "r = 78.096 ckpc\n",
+      "\n",
+      "== Bulge ==\n",
+      "z = 2.879 ckpc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r_xy = 6.724 ckpc\n",
+      "r = 7.352 ckpc\n",
+      "\n",
+      "== Cold Disc ==\n",
+      "z = 2.236 ckpc\n",
+      "r_xy = 21.735 ckpc\n",
+      "r = 21.823 ckpc\n",
+      "\n",
+      "== Warm Disc ==\n",
+      "z = 3.855 ckpc\n",
+      "r_xy = 17.226 ckpc\n",
+      "r = 17.883 ckpc\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in settings.components:\n",
+    "    print(f\"== {settings.component_labels[c]} ==\")\n",
+    "    mask = get_mask(df, component=c)\n",
+    "    z = weighted_percentile(\n",
+    "        np.abs(df[\"zPosition_ckpc\"][mask].to_numpy()),\n",
+    "        df[\"Mass_Msun\"][mask].to_numpy(), PERCENTILE)\n",
+    "    print(\"z = \" + str(np.round(z, 3)) + \" ckpc\")\n",
+    "\n",
+    "    rxy = weighted_percentile(\n",
+    "        df[\"CylindricalRadius_ckpc\"][mask].to_numpy(),\n",
+    "        df[\"Mass_Msun\"][mask].to_numpy(), PERCENTILE)\n",
+    "    print(\"r_xy = \" + str(np.round(rxy, 3)) + \" ckpc\")\n",
+    "\n",
+    "    r = weighted_percentile(\n",
+    "        df[\"SphericalRadius_ckpc\"][mask].to_numpy(),\n",
+    "        df[\"Mass_Msun\"][mask].to_numpy(), PERCENTILE)\n",
+    "    print(\"r = \" + str(np.round(r, 3)) + \" ckpc\")\n",
+    "\n",
+    "    print()"
    ]
   }
  ],
